agregando imagenes y modificando el media screen

--- a/index.html
+++ b/index.html
@@ -48,16 +48,14 @@
                     <li><a href="#">Twitter</a></li>
                 </ul>
             </aside>
+
             <section>
-                <div>
+                <div class="seccion">
+                    <h2>Descubre el Café Perfecto</h2>
                     <p>
-                        Descubre el arte de preparar el café perfecto desde casa. Ya seas amante del espresso, fan del
-                        café
-                        frío
-                        o busques nuevas formas de disfrutar tu taza diaria, aquí encontrarás recetas deliciosas y
-                        fáciles
-                        para
-                        todos los gustos.</p>
+                        El café perfecto desde casa. Ya seas amante del espresso, fan del
+                        café frío o busques nuevas formas de disfrutar tu taza diaria, aquí encontrarás recetas
+                        deliciosas y fáciles para todos los gustos.</p>
 
                     <div class="quienes-somos">
                         <h2>Quienes Somos</h2>
@@ -89,15 +87,14 @@
         </div>
     </div>
 
-    <div class="contenido">
-        <div id="Menu">
+    <div id="Menu" class="contenido">
+        <div>
             <h2>Menu</h2>
             <h2>Recetas destacadas</h2>
 
             <h2>Latte</h2>
-            <img src="./imagenes/latte-art.png" width="40px">
             <div class="imagen">
-                <img src="./Imagenes/imagen-cafe-latte.jpg" width="30%" alt="">
+                <img src="./Imagenes/imagen-cafe-latte.jpg" width="30%" alt="Latte">
             </div>
             <p>También conocido como: Café con leche (versión moderna)
                 Por qué es famoso: Es cremoso, suave y perfecto para quienes quieren café sin que sea muy
@@ -111,9 +108,8 @@
             Se sirve en vaso o taza grande</p>
 
             <h2>Americano</h2>
-            <img src="./imagenes/americano-art.png" width="40px">
             <div class="imagen">
-
+                <img src="./Imagenes/imagen-Cafe-americano.webp" width="30%" alt="Americano">
             </div>
             <p>También conocido como: Café americano
                 Por qué es famoso: Es un café fuerte y simple, ideal para quienes prefieren el sabor del café
@@ -126,9 +122,8 @@
             Se sirve en taza grande</p>
 
             <h2>Frappuccino</h2>
-            <img src="./imagenes/frappuccino-art.png" width="40px">
             <div class="imagen">
-
+                <img src="./Imagenes/imagen-cafe-frappucino.jpg" width="30%" alt="Frappuccino">
             </div>
             <p>También conocido como: Café helado
                 Por qué es famoso: Es refrescante, dulce y perfecto para los días calurosos.
@@ -142,9 +137,8 @@
             Se sirve en vaso grande con tapa y popote</p>
 
             <h2>Affogato</h2>
-            <img src="./imagenes/affogato-art.png" width="40px">
             <div class="imagen">
-
+                <img src="./Imagenes/imagen-cafe-affogato.jpg" width="30%" alt="Affogato">
             </div>
             <p>También conocido como: Café con helado
                 Por qué es famoso: Es un postre delicioso que combina café caliente con helado frío.
@@ -156,9 +150,8 @@
             Se sirve en vaso o taza pequeña</p>
 
             <h2>Cold Brew</h2>
-            <img src="./imagenes/cold-brew-art.png" width="40px">
             <div class="imagen">
-                <img src="" alt="">
+                <img src="./Imagenes/imgen-cafe-cold-brew.avif" width="30%" alt="">
             </div>
             <p>También conocido como: Café frío
                 Por qué es famoso: Es suave, menos ácido y perfecto para los amantes del café frío.
