correcion de algunos elementos en html y css

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     </div>
                 </div>
 
-                <Div class="Promos">
+                <div class="promos">
                     <h2>Promociones</h2>
                     <p>¡Disfruta de nuestras ofertas especiales! Cada semana, una nueva promoción en tu bebida favorita.
                         No
@@ -82,7 +82,7 @@
                         <li>Compra uno y lleva el segundo a mitad de precio</li>
                         <li>Happy Hour: 2x1 en todas las bebidas de 5 a 7 PM</li>
                     </ul>
-                </Div>
+                </div>
             </section>
         </div>
     </div>
@@ -99,11 +99,11 @@
             <p>También conocido como: Café con leche (versión moderna)
                 Por qué es famoso: Es cremoso, suave y perfecto para quienes quieren café sin que sea muy
                 fuerte.
-            <ul>
                 <strong>Ingredientes:</strong>
-                1 shot de espresso
-                200 ml de leche vaporizada
-                Un toque de espuma (opcional)
+            <ul>
+                <li>1 shot de espresso</li>
+                <li>200 ml de leche vaporizada</li>
+                <li>Un toque de espuma (opcional)</li>
             </ul>
             Se sirve en vaso o taza grande</p>
 
@@ -114,12 +114,12 @@
             <p>También conocido como: Café americano
                 Por qué es famoso: Es un café fuerte y simple, ideal para quienes prefieren el sabor del café
                 puro.
-            <ul>
                 <strong>Ingredientes:</strong>
-                1 shot de espresso
-                Agua caliente al gusto
+            <ul>
+                <li>1 shot de espresso</li>
+                <li>Agua caliente al gusto</li>
             </ul>
-            Se sirve en taza grande</p>
+            Se sirve en vaso o taza grande</p>
 
             <h2>Frappuccino</h2>
             <div class="imagen">
@@ -127,12 +127,12 @@
             </div>
             <p>También conocido como: Café helado
                 Por qué es famoso: Es refrescante, dulce y perfecto para los días calurosos.
-            <ul>
                 <strong>Ingredientes:</strong>
-                1 taza de café frío
-                1/2 taza de leche
-                Hielo al gusto
-                Azúcar o jarabe al gusto
+            <ul>
+                <li>1 taza de café frío</li>
+                <li>1/2 taza de leche</li>
+                <li>Hielo al gusto</li>
+                <li>Azúcar o jarabe al gusto</li>
             </ul>
             Se sirve en vaso grande con tapa y popote</p>
 
@@ -142,24 +142,24 @@
             </div>
             <p>También conocido como: Café con helado
                 Por qué es famoso: Es un postre delicioso que combina café caliente con helado frío.
-            <ul>
                 <strong>Ingredientes:</strong>
-                1 bola de helado (vainilla o tu favorito)
-                1 shot de espresso caliente
+            <ul>
+                <li>1 bola de helado (vainilla o tu favorito)</li>
+                <li>1 shot de espresso caliente</li>
             </ul>
             Se sirve en vaso o taza pequeña</p>
 
             <h2>Cold Brew</h2>
             <div class="imagen">
-                <img src="./Imagenes/imgen-cafe-cold-brew.avif" width="30%" alt="">
+                <img src="./Imagenes/imgen-cafe-cold-brew.avif" width="30%" alt="Cold Brew">
             </div>
             <p>También conocido como: Café frío
                 Por qué es famoso: Es suave, menos ácido y perfecto para los amantes del café frío.
-            <ul>
                 <strong>Ingredientes:</strong>
-                1 taza de café molido grueso
-                4 tazas de agua fría
-                Hielo al gusto
+            <ul>
+                <li>1 taza de café molido grueso</li>
+                <li>4 tazas de agua fría</li>
+                <li>Hielo al gusto</li>
             </ul>
             Se sirve en vaso grande con hielo</p>
 
@@ -175,36 +175,31 @@
             <ul>
                 <div class="sucursal">
                     <li>Sucursal Centro: Calle Principal 123, Ciudad Buenos Aires</li>
-                    <img src="" alt="">
+                    <img src="./Imagenes/suc-obelisco.webp" width="30%" alt="Sucursal Obelisco">
                 </div>
 
                 <div class="sucursal">
                     <li>Sucursal Norte: Avenida 456, Ciudad de Buenos Aires</li>
-                    <img src="" alt="">
+                    <img src="./Imagenes/suc-park-rivadavia.jpg" width="30%" alt="Sucursal Parque Rivadavia">
                 </div>
 
                 <div class="sucursal">
                     <li>Sucursal Sur: Plaza Mayor 789, Ciudad de Buenos Aires</li>
-                    <img src="" alt="">
+                    <img src="./Imagenes/suc-plaza-italia.jpg" width="30%" alt="Sucursal plaza Italia">
                 </div>
             </ul>
-
         </div>
+    </div>
+    <footer>
         <div id="Contacto">
             <h2>Contacto</h2>
             <p>Para más información, preguntas o sugerencias, no dudes en contactarnos a través de nuestras redes
-                sociales o enviándonos un correo electrónico.</p>
-            <ul>
-                <li>Email:
+                sociales o enviándonos un correo electrónico al.</p>
+            <p>Email:luna-cafe@gmail.com</p>
         </div>
-    </div>
-
-
-
-
-
-
-    <footer>Derechos reservados Jesus Acosta S.A.</footer>
+        <p>© 2025 Luna Cafe. Todos los derechos reservados.</p>
+        <p>Desarrollado por Jesus Acosta S.A.</p>
+    </footer>
 </body>
 
 </html>
